// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. video marked as sky sports 1`] = `
<div>
  <div>
    Video unable to play
  </div>
  <div>
    Please check your network connection and try refreshing the page. If that doesn't work, please try again later
  </div>
</div>
`;

exports[`2. no sky banner displayed on play 1`] = `
<div>
  <div>
    <video
      poster="b9a31d3949b1882a09ed2f8508d538f3"
    />
  </div>
</div>
`;
